--- a/dwca_config/field_mapping/dwca_ices_terms_emof.yaml
+++ b/dwca_config/field_mapping/dwca_ices_terms_emof.yaml
@@ -72,7 +72,7 @@ dwcaEmofContent:
     extraMeasurements:
       - measurementType: Wave height
         measurementTypeID:
-        measurementUnit: m
+        measurementUnit: Metres
         measurementUnitID: "http://vocab.nerc.ac.uk/collection/P06/current/ULAA/"
         sourceKey: wave_height_m
       - measurementType: Wave observation
@@ -92,8 +92,8 @@ dwcaEmofContent:
         sourceKey: wave_exposure_fetch
       - measurementType: Wind speed
         measurementTypeID:
-        measurementUnit: m/s
-        measurementUnitID:
+        measurementUnit: Metres per second
+        measurementUnitID: "http://vocab.nerc.ac.uk/collection/P06/current/UVAA/"
         sourceKey: wind_speed_ms
       - measurementType: Wind direction
         measurementTypeID:
@@ -102,17 +102,17 @@ dwcaEmofContent:
         sourceKey: wind_direction_code
       - measurementType: Water level deviation
         measurementTypeID:
-        measurementUnit: m
+        measurementUnit: Metres
         measurementUnitID: "http://vocab.nerc.ac.uk/collection/P06/current/ULAA/"
         sourceKey: water_level_deviation_m
       - measurementType: Water depth
-        measurementTypeID:
-        measurementUnit: m
+        measurementTypeID: "http://vocab.nerc.ac.uk/collection/P01/current/MBANZZZZ/"
+        measurementUnit: Metres
         measurementUnitID: "http://vocab.nerc.ac.uk/collection/P06/current/ULAA/"
         sourceKey: water_depth_m
       - measurementType: Secchi depth
         measurementTypeID: "http://vocab.nerc.ac.uk/collection/P01/current/SECCSDNX/"
-        measurementUnit: m
+        measurementUnit: Metres
         measurementUnitID: "http://vocab.nerc.ac.uk/collection/P06/current/ULAA/"
         sourceKey: secchi_depth_m
       - measurementType: Secchi depth quality
@@ -137,18 +137,18 @@ dwcaEmofContent:
         sourceKey: incubation_radiation
       - measurementType: Air temperature wet
         measurementTypeID:
-        measurementUnit: degC
-        measurementUnitID:
+        measurementUnit: Degrees Celsius
+        measurementUnitID: "http://vocab.nerc.ac.uk/collection/P06/current/UPAA/"
         sourceKey: air_temperature_wet_degc
       - measurementType: Air temperature
         measurementTypeID:
-        measurementUnit: degC
-        measurementUnitID:
+        measurementUnit: Degrees Celsius
+        measurementUnitID: "http://vocab.nerc.ac.uk/collection/P06/current/UPAA/"
         sourceKey: air_temperature_degc
       - measurementType: Air pressure
         measurementTypeID:
-        measurementUnit: hpa
-        measurementUnitID:
+        measurementUnit: Hectopascals
+        measurementUnitID: "http://vocab.nerc.ac.uk/collection/P06/current/HPAX/"
         sourceKey: air_pressure_hpa
       - measurementType: Ice observation
         measurementTypeID:
@@ -165,7 +165,7 @@ dwcaEmofContent:
         measurementUnit:
         measurementUnitID:
         sourceKey: sediment_type
-      - measurementType: Sampling laboratory ID
+      - measurementType: Sampling laboratory name #ID
         measurementTypeID:
         measurementUnit:
         measurementUnitID:
@@ -247,39 +247,39 @@ dwcaEmofContent:
 
     extraMeasurements:
       - measurementType: Sampled volume
-        measurementTypeID:
-        measurementUnit: L
-        measurementUnitID:
+        measurementTypeID: "http://vocab.nerc.ac.uk/collection/P01/current/VOLWBSMP/"
+        measurementUnit: Litres
+        measurementUnitID: "http://vocab.nerc.ac.uk/collection/P06/current/ULIT/"
         sourceKey: sampled_volume_l
       - measurementType: Sampler area
-        measurementTypeID: http://vocab.nerc.ac.uk/collection/Q01/current/Q0100017/
-        measurementUnit: cm2
-        measurementUnitID:
+        measurementTypeID: "http://vocab.nerc.ac.uk/collection/Q01/current/Q0100017/"
+        measurementUnit: Square centimetres
+        measurementUnitID: "http://vocab.nerc.ac.uk/collection/P06/current/SQCM/"
         sourceKey: sampler_area_cm2
       - measurementType: Wire angle
         measurementTypeID:
-        measurementUnit: deg
-        measurementUnitID:
+        measurementUnit: Degrees
+        measurementUnitID: "http://vocab.nerc.ac.uk/collection/P06/current/UAAA/"
         sourceKey: wire_angle_deg
       - measurementType: Flowmeter length
         measurementTypeID:
-        measurementUnit: m
+        measurementUnit: Metres
         measurementUnitID: "http://vocab.nerc.ac.uk/collection/P06/current/ULAA/"
         sourceKey: flowmeter_length_m
       - measurementType: Mesh size
         measurementTypeID: "http://vocab.nerc.ac.uk/collection/P01/current/MSHSIZE1/"
-        measurementUnit: um
-        measurementUnitID:
+        measurementUnit: Micrometres
+        measurementUnitID: "http://vocab.nerc.ac.uk/collection/P06/current/UMIC/"
         sourceKey: mesh_size_um
       - measurementType: Upper mesh size
-        measurementTypeID: "http://vocab.nerc.ac.uk/collection/P01/current/MSHSIZE1/ "
-        measurementUnit: um
-        measurementUnitID:
+        measurementTypeID:
+        measurementUnit: Micrometres
+        measurementUnitID: "http://vocab.nerc.ac.uk/collection/P06/current/UMIC/"
         sourceKey: upper_mesh_size_um
-      - measurementType: Mesh size
-        measurementTypeID: "http://vocab.nerc.ac.uk/collection/P01/current/MSHSIZE1/ "
-        measurementUnit: um
-        measurementUnitID:
+      - measurementType: Lower mesh size
+        measurementTypeID:
+        measurementUnit: Micrometres
+        measurementUnitID: "http://vocab.nerc.ac.uk/collection/P06/current/UMIC/"
         sourceKey: lower_mesh_size_um
       - measurementType: Factors influencing
         measurementTypeID:
@@ -293,18 +293,18 @@ dwcaEmofContent:
         sourceKey: sample_splitting_code
       - measurementType: Analysed volume
         measurementTypeID:
-        measurementUnit: cm3
-        measurementUnitID:
+        measurementUnit: Cubic centimetres
+        measurementUnitID: "http://vocab.nerc.ac.uk/collection/P06/current/VVCC/"
         sourceKey: analysed_volume_cm3
       - measurementType: Sedimentation time
         measurementTypeID:
-        measurementUnit: h
-        measurementUnitID:
+        measurementUnit: Hours
+        measurementUnitID: "http://vocab.nerc.ac.uk/collection/P06/current/UHOR/"
         sourceKey: sedimentation_time_h
       - measurementType: Sedimentation volume
         measurementTypeID:
-        measurementUnit: ml
-        measurementUnitID:
+        measurementUnit: Millilitres
+        measurementUnitID: "http://vocab.nerc.ac.uk/collection/P06/current/VVML/"
         sourceKey: sedimentation_volume_ml
       - measurementType: Number of portions
         measurementTypeID:
@@ -336,16 +336,16 @@ dwcaEmofContent:
         measurementUnitID:
         sourceKey: method_reference_code
       - measurementType: Method documentation
-        measurementTypeID:
+        measurementTypeID: "https://vocab.nerc.ac.uk/collection/Q01/current/Q0100003/"
         measurementUnit:
         measurementUnitID:
         sourceKey: method_documentation
       - measurementType: Sampler type code
-        measurementTypeID: http://vocab.nerc.ac.uk/collection/Q01/current/Q0100002/
+        measurementTypeID: "http://vocab.nerc.ac.uk/collection/Q01/current/Q0100002/"
         measurementUnit:
         measurementUnitID:
         sourceKey: sampler_type_code
-      - measurementType: Plankton sampling method
+      - measurementType: Sampling depth method #Plankton sampling method
         measurementTypeID:
         measurementUnit:
         measurementUnitID:
@@ -432,25 +432,25 @@ dwcaEmofContent:
         sourceKey: size_class
       - measurementType: Size minimum
         measurementTypeID:
-        measurementUnit: um
-        measurementUnitID:
+        measurementUnit: Micrometres
+        measurementUnitID: "http://vocab.nerc.ac.uk/collection/P06/current/UMIC/"
         sourceKey: size_min_um
       - measurementType: Size maximum
         measurementTypeID:
-        measurementUnit: um
-        measurementUnitID:
+        measurementUnit: Micrometres
+        measurementUnitID: "http://vocab.nerc.ac.uk/collection/P06/current/UMIC/"
         sourceKey: size_max_um
       - measurementType: Cell volume
         measurementTypeID:
-        measurementUnit: um3
-        measurementUnitID:
+        measurementUnit: Cubic micrometres
+        measurementUnitID: "http://vocab.nerc.ac.uk/collection/P06/current/UMCU/"
         sourceKey: reported_cell_volume_um3
-      - measurementType: Coefficient
+      - measurementType: Coefficient for calculation of abundance
         measurementTypeID:
         measurementUnit:
         measurementUnitID:
         sourceKey: coefficient
-      - measurementType: Magnification
+      - measurementType: Microscope magnification
         measurementTypeID:
         measurementUnit:
         measurementUnitID:
@@ -490,7 +490,7 @@ dwcaEmofContent:
         measurementUnit:
         measurementUnitID:
         sourceKey: degree_biofouling
-      - measurementType: Analytical laboratory ID
+      - measurementType: Analytical laboratory name #ID
         measurementTypeID:
         measurementUnit:
         measurementUnitID:
@@ -500,7 +500,11 @@ dwcaEmofContent:
         measurementUnit:
         measurementUnitID:
         sourceKey: analytical_laboratory_accreditated
-
+      - measurementType: Size class reference list
+        measurementTypeID:
+        measurementUnit:
+        measurementUnitID:
+        sourceKey: size_class_ref_list
       - measurementType: Stratum ID
         measurementTypeID:
         measurementUnit:
