--- a/dwca_config/field_mapping/dwca_ices_terms_emof.yaml
+++ b/dwca_config/field_mapping/dwca_ices_terms_emof.yaml
@@ -24,7 +24,7 @@ dwcaEmofColumns:
   - Monitoring purpose
 
 dwcaEmofContent:
-  - eventType: sampling_event
+  - eventType: Sampling event
     dwcTerms:
       id:
         dwcaKey: sampling_event_key
