--- a/dwca_config/field_mapping/dwca_ices_terms_event.yaml
+++ b/dwca_config/field_mapping/dwca_ices_terms_event.yaml
@@ -66,7 +66,7 @@ dwcaEventContent:
           ownerInstitutionCode:
               text: Swedish Agency for Marine and Water Management
 
-    - eventType: sampling_event
+    - eventType: Sampling event
       dwcTerms:
           id:
               sourceKey: sampling_event_key
