--- a/dwca_config/field_mapping/dwca_ices_terms_event.yaml
+++ b/dwca_config/field_mapping/dwca_ices_terms_event.yaml
@@ -214,7 +214,7 @@ dwcaEventContent:
           sampleSizeValue:
               sourceKey: sampled_volume_l
           sampleSizeUnit:
-              sourceKey:
+              text: Litres
           samplingEffort:
               sourceKey:
           eventDate:
