idwca cruise emof

--- a/dwca_config/field_mapping/dwca_ices_terms_emof.yaml
+++ b/dwca_config/field_mapping/dwca_ices_terms_emof.yaml
@@ -26,6 +26,8 @@ dwcaEmofColumns:
 dwcaEmofContent:
   - eventType: cruise
     dwcTerms:
+      id:
+        dwcaKey: cruise_key
       eventID:
         dwcaKey: cruise_key
       measurementID:
