idwca emof cruise

--- a/dwca_config/field_mapping/dwca_ices_keys.yaml
+++ b/dwca_config/field_mapping/dwca_ices_keys.yaml
@@ -60,6 +60,10 @@ eventTypeKeys:
         - recruits
 
   emof:
+    - eventType: cruise
+      keyName: cruise_key
+      eventKeyName: cruise_key
+
     - eventType: Sampling event
       keyName: sampling_event_key
       eventKeyName: sampling_event_key
