--- a/dwca_config/field_mapping/dwca_ices_terms_emof.yaml
+++ b/dwca_config/field_mapping/dwca_ices_terms_emof.yaml
@@ -105,16 +105,16 @@ dwcaEmofContent:
         sourceKey:
       measurementRemarks:
         sourceKey:
-      country:
-        text: Sweden
-      Platform code:
-        sourceKey: platform_code
-      ICES datatype:
-        sourceKey: delivery_datatype
-      Monitoring program code:
-        sourceKey: monitoring_program_code
-      Monitoring purpose:
-        text: B,E,S,T
+#      country:
+#        text: Sweden
+#      Platform code:
+#        sourceKey: platform_code
+#      ICES datatype:
+#        sourceKey: delivery_datatype
+#      Monitoring program code:
+#        sourceKey: monitoring_program_code
+#      Monitoring purpose:
+#        text: B,E,S,T
 
     extraMeasurements:
       - measurementType: ICES datatype
@@ -131,7 +131,7 @@ dwcaEmofContent:
         measurementTypeID:
         measurementUnit:
         measurementUnitID:
-        text: B,E,S,T
+        text: "B,E,S,T"
       - measurementType: Wave height
         measurementTypeID:
         measurementUnit: Metres
@@ -268,11 +268,6 @@ dwcaEmofContent:
         measurementUnitID:
         sourceKey: monitoring_station_type_code
 
-      - measurementType: ICES datatype
-        measurementTypeID:
-        measurementUnit:
-        measurementUnitID:
-        sourceKey: delivery_datatype
 
   - eventType: sample
     dwcTerms:
