--- a/dwca_config/field_mapping/dwca_ices_terms_emof.yaml
+++ b/dwca_config/field_mapping/dwca_ices_terms_emof.yaml
@@ -60,11 +60,12 @@ dwcaEmofContent:
         sourceKey:
 
     extraMeasurements:
+    dwcTerms:
       - measurementType: Country performing sampling
         measurementTypeID:
         measurementUnit:
         measurementUnitID:
-          text: "77"
+        text: "77"
       - measurementType: Platform code
         measurementTypeID:
         measurementUnit:
