--- a/dwca_config/field_mapping/dwca_terms_emof.yaml
+++ b/dwca_config/field_mapping/dwca_terms_emof.yaml
@@ -253,6 +253,16 @@ dwcaEmofContent:
         measurementUnit:
         measurementUnitID:
         sourceKey: water_land_station_type_code
+      - measurementType: Logger deployment start date
+        measurementTypeID:
+        measurementUnit:
+        measurementUnitID:
+        sourceKey: visit_logger_startdate
+      - measurementType: Logger deployment end date
+        measurementTypeID:
+        measurementUnit:
+        measurementUnitID:
+        sourceKey: visit_logger_enddate
 #      - measurementType: Monitoring station type
 #       measurementTypeID:
 #        measurementUnit:
