--- a/dwca_config/field_mapping/dwca_terms_event.yaml
+++ b/dwca_config/field_mapping/dwca_terms_event.yaml
@@ -216,7 +216,7 @@ dwcaEventContent:
           sampleSizeValue:
               sourceKey: sampled_volume_l
           sampleSizeUnit:
-              sourceKey:
+              text: Litres
           samplingEffort:
               sourceKey:
           eventDate:
