--- a/dwca_config/dwca_seal_pathology.yaml
+++ b/dwca_config/dwca_seal_pathology.yaml
@@ -64,3 +64,31 @@ filters:
         - filters.txt
         - filters_seal_pathology.txt
 
+
+metadataSourceFiles:
+    directory:
+        ../metadata/dcat_ap_se
+    files:
+        - titles.yaml
+        - purpose.yaml
+        - orderer.yaml
+        - methods.yaml
+        - license.yaml
+        - laboratory.yaml
+        - geographic_coverage.yaml
+        - datahost.yaml
+        - keywords.yaml
+        - url_linkage.yaml
+
+metadataTemplate:
+    directory:
+        dwca_config/metadata_templates
+    files: 
+        - yame_sealpathology_nat_template_sv.json
+
+metadataTarget:
+    directory:
+        data_out
+    files: 
+        - yame_sealpathology_nat_sv.json
+
