--- a/dwca_config/eml_metadata/eml_phytoplankton_reg_recip_proj.yaml
+++ b/dwca_config/eml_metadata/eml_phytoplankton_reg_recip_proj.yaml
@@ -8,7 +8,7 @@ additionalMetadata:
                 Swedish municipalities,
                 Swedish coalitions of water conservation,
                 and Swedish Meteorological and Hydrological Institute et.al.(2022).
-                SHARK - SHARK - Regional marine environmental monitoring, recipient control and monitoring projects of Phytoplankton in Sweden since 1985.
+                SHARK - Regional marine environmental monitoring, recipient control and monitoring projects of Phytoplankton in Sweden since 1985.
 
 dataset:
     title: SHARK - Regional marine environmental monitoring, recipient control and monitoring projects of Phytoplankton in Sweden since 1985
